<resources>
    <string name="app_name">ReservApp</string>
    <string name="main_welcome_message">Bienvenido a \nReservApp</string>
    <string name="welcome_message">Planifica tu evento y encuentra \nel lugar perfecto con nosotros</string>
    <string name="begin_message">Empezar</string>
    <string name="head_select_profile">Hola,\n¿Qué te gustaría hacer hoy?</string>
    <string name="go_user_button_text">Encuentra lugares de eventos</string>
    <string name="go_host_button_text">Publica tu propio espacio</string>
    <string name="head_user_register">Publica tu lugar</string>
    <string name="subhead_user_register">Sólo necesitamos una par \nde detalles para empezar</string>
    <string name="name_user">Nombre Completo</string>
    <string name="email_user">Correo Electrónico</string>
    <string name="password_user">Contraseña</string>
    <string name="repassword_user">Repetir contraseña</string>
    <string name="phone_user">Número telefónico</string>
    <string name="register_user_text">Registrarse</string>
    <string name="down_user_register">¿Ya tienes una cuenta?</string>
    <string name="log_in_text">Iniciar Sesión</string>
    <string name="head_login">Bienvenido de vuelta</string>
    <string name="login_user_text">Iniciar Sesión</string>
    <string name="email_login_user">Correo Electrónico</string>
    <string name="password_login_user" />
    <string name="welcome_social_event_text">Hola\nBusca un lugar para tu familia o tus amigos.</string>
    <string name="welcome_corporate_event_text">Hola,\nEncuentra el lugar perfecto.</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="social_event">Eventos Sociales</string>
    <string name="corporate_event">Eventos Corporativos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Explore_text">Explorar los lugares</string>
    <string name="places_explore_text">Explorar</string>
    <string name="my_favouties">Mis Favoritos</string>
    <string name="favouties">Favoritos</string>
    <string name="my_profile_text">Mi Perfil</string>
    <string name="profile_text">Perfil</string>
    <string name="my_reservation_text">Mis Reservas</string>
    <string name="reservation_text">Reservas</string>
    <string name="title_activity_tabbed_host">TabbedHostActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="plalces_text">Mis Lugares</string>
    <string name="profile_host">Mi perfil </string>
    <string name="my_plalces_text">Lugares del anfitrion</string>
    <string name="my_profile_host">Perfil Anfritrión</string>
    <string name="title_activity_tabbed_main">TabbedMainActivity</string>
    <string name="anfitrion_text">Anfitrion</string>
    <string name="discover_places">Descubir Lugar</string>
    <string name="subhead_host_registe">Solo necesitamos un par de detalles para \nque publiques tus lugares</string>
    <string name="head_login_host">Bienvenido Anfitrión</string>
    <string name="title_activity_main_host">MainActivityHost</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Mi Perfil</string>
    <string name="title_myplaces">Mis Lugares</string>
    <string name="place_name">Nombre del lugar</string>
    <string name="city">Ciudad del lugar</string>
    <string name="price">Precio del lugar</string>
    <string name="capacity">Capacidad del lugar</string>
    <string name="button_new_place">Nuevo lugar</string>
    <string name="title_new_place">Agregar Nuevo Lugar</string>
</resources>