<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegisterActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/subhead_user_register"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="32dp"
        android:text="@string/head_user_register"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_user_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/Black"
        app:boxStrokeColor="@color/Red"
        app:boxStrokeErrorColor="@color/Red"
        app:counterTextColor="@color/Red"
        app:errorTextColor="@color/Red"
        app:hintTextColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_user"
            android:inputType="text|textAutoComplete"
            android:textColor="@color/Black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_user_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/Black"
        app:boxStrokeColor="@color/Red"
        app:boxStrokeErrorColor="@color/Red"
        app:counterTextColor="@color/Red"
        app:errorTextColor="@color/Red"
        app:hintTextColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_user_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_user"
            android:inputType="text|textEmailAddress|textAutoComplete"
            android:textColor="@color/Black"
            android:textColorHighlight="@color/Black"
            android:textColorHint="@color/Black"
            android:textColorLink="@color/Black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_user_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/Black"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/Red"
        app:boxStrokeErrorColor="@color/Red"
        app:counterTextColor="@color/Red"
        app:errorTextColor="@color/Red"
        app:hintTextColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_user_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_user"
            android:inputType="text|textPassword|textAutoComplete"
            android:textColor="@color/Black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repassword_user_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/Black"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/Red"
        app:boxStrokeErrorColor="@color/Red"
        app:counterTextColor="@color/Red"
        app:errorTextColor="@color/Red"
        app:hintTextColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_user_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repassword_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repassword_user"
            android:inputType="text|textPassword|textAutoComplete"
            android:textColor="@color/Black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_user_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/Black"
        app:boxStrokeColor="@color/Red"
        app:boxStrokeErrorColor="@color/Red"
        app:counterTextColor="@color/Red"
        app:errorTextColor="@color/Red"
        app:hintTextColor="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_user_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_user"
            android:inputType="phone"
            android:textColor="@color/Black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_user_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/DeepSkyBlue"
        android:text="@string/register_user_text"
        android:textColor="@color/White"
        android:textColorHint="@color/White"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repassword_user_text_input_layout" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/down_user_register"
        android:textColor="@color/Black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_user_button" />

    <TextView
        android:id="@+id/log_in_user_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/log_in_text"
        android:textColor="@color/Red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/register_user_button" />

</androidx.constraintlayout.widget.ConstraintLayout>