<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HostLoginActivity">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:text="@string/head_login_host"
        android:textColor="@color/Black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_login_host_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/Black"
        app:boxStrokeColor="@color/DeepSkyBlue"
        app:boxStrokeErrorColor="@color/DeepSkyBlue"
        app:counterTextColor="@color/DeepSkyBlue"
        app:errorTextColor="@color/DeepSkyBlue"
        app:hintTextColor="@color/DeepSkyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login_host_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_login_user"
            android:inputType="text|textEmailAddress|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login_host_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/Black"
        app:boxStrokeColor="@color/DeepSkyBlue"
        app:boxStrokeErrorColor="@color/DeepSkyBlue"
        app:counterTextColor="@color/DeepSkyBlue"
        app:errorTextColor="@color/DeepSkyBlue"
        app:hintTextColor="@color/DeepSkyBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login_host_text_input_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_host_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_user" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_host_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/Red"
        android:text="@string/login_user_text"
        android:textColor="@color/White"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login_host_text_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>